--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message=Hello department Service update
+spring.boot.message=Hello department Service update spring boot project according to sir
